--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   mysql:
     image: mysql:8
@@ -9,6 +8,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
+      - ./dump/dump.sql:/docker-entrypoint-initdb.d/init.sql
       - mysql_data:/var/lib/mysql
 
 volumes:
